--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-DAFTAR HARGA ATK 2022.xlsx
-DAFTAR HARGA ATK 2023.xlsx
+*.xlsx
 __pycache__
 utils/__pycache__
 myNewFile.xlsx
 .*
 temp*
+bots/*
+Images/*
+mockups/*
