--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,8 +1,10 @@
-beautifulsoup4==4.11.1
+aiohttp==3.8.3
+beautifulsoup4==4.11.2
 Flask==2.2.2
+flaskwebgui==0.1.13
 openpyxl==3.0.10
 pandas==1.5.2
 pymongo==4.3.3
 requests==2.25.1
-selenium==4.7.2
+selenium==4.8.2
 Werkzeug==2.2.2
